fix hidden overflow on body

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@ body {
   align-items: center;
   margin: auto;
 
-  overflow: hidden;
-  position: relative;
 }
 
 .bookCard {
